tests/NormalTests/paczka2/big_fuzzy/41755616.err
Error in line 4: WAQn A589 84,0
Error in line 7: 5My A953 24,6
Error in line 12: 5My S439 4,2
Error in line 26: 5My A692 14,6
Error in line 20: WAQn S439 98,6
Error in line 28: WAQn A692 78,9
Error in line 30: WAQn A589 84,5
Error in line 14: 50LJxnkAwe A953 26,9
Error in line 35: 50LJxnkAwe A692 76,0
Error in line 45: 50LJxn»Awe A589 95,2
Error in line 46: A589 A589 95,2
Error in line 52: A589 A692 33,5
Error in line 67: QpEA A692 64,5
Error in line 70: QpEA S439 90,1
Error in line 73: 5My A953 93,2
Error in line 76: A589 A692 38,0
Error in line 42: 50LJxnkAwe A589 52,6
Error in line 78: WAQn A589 89,7
Error in line 90: 2G A589 9,4
Error in line 93: 5My A589 179,0
Error in line 92: 2PG A589 30,4
Error in line 103: A589 A589 17,2
Error in line 117: 5My A692 71,2
Error in line 124: A589 A692 41,0
Error in line 125: QpEA S439 54,5
Error in line 133: WAQn A589 24,2
Error in line 119: 5My A953 65,2
Error in line 123: dHAKrHn A953 165,4
Error in line 139: 5My A589 25,1
Error in line 153: QpEA A692 11,3
Error in line 152: WAQn A589 4,7
Error in line 164: 50LJxnkAwe S439 254,3
Error in line 160: 5My A692 29,7
Error in line 211: QpEA A953 49,4
Error in line 205: dHAKrHn A589 39,5
Error in line 219: dHAKrHn A692 62,7
Error in line 222: dHAKrHn A589 90,5
Error in line 241: A589 S439 79,8
Error in line 239: 5My A692 42,8
Error in line 243: 5My A953 77,7
